# demonstrate-meson-openmp-pybind11

./: .gitignore  README.rst  meson.build  meson_options.txt  pytest.ini
.github/workflows/: ci-linux-gcc.yml  ci-macos-clang.yml  ci-windows-clang-cl.yml  ci-windows-msvc.yml
src/: meson.build
src/demonstrate_meson_openmp/: dllexport.hpp  meson.build  module_header_only.cpp  module_library.cpp  module_no_openmp.cpp  openmp_compare_thread_count.hpp  openmp_demo_lib.cpp  openmp_helper.hpp  openmp_openmp_defined.hpp  openmp_try_parallel_pragma.hpp
subprojects/: .gitignore
tests/: meson.build
tests/demonstrate_meson_openmp/: meson.build  openmp_defined.test.cpp  openmp_parallel_pragma.test.cpp  openmp_thread_count.test.cpp
tests/python/: test_no_openmp.py  test_openmp_header_only.py  test_openmp_using_library.py
